# whllcry

./: .replit  COMMIT_EDITMSG  index  index.html  models.py  proses.php  pyproject.toml
TrafficSight/: app.py  forms.py  replit.md  routes.py  utils.py
TrafficSight/attached_assets/: Pasted-Buatkan-project-Flask-dengan-fitur-fitur-berikut-1-Dashboard-Pengunjung-Setiap-kali-ada-p-1755929361896_1755929361897.txt
TrafficSight/static/css/: style.css
TrafficSight/templates/: base.html  dashboard.html  index.html  notifications.html
TrafficSight/templates/admin/: users.html
TrafficSight/templates/auth/: login.html
TrafficSight/templates/chat/: global.html  private.html
TrafficSight/templates/games/: guess_number.html  quiz.html  snake.html
TrafficSight/templates/polls/: list.html  view.html
TrafficSight/templates/posts/: view.html
TrafficSight/templates/videos/: feed.html
logs/: HEAD
logs/refs/heads/: replit-agent
refs/heads/: main
refs/replit/: agent-ledger
static/js/: chat.js  games.js  main.js
templates/: 403.html  404.html  500.html  report_form.html
templates/admin/: panel.html  reports.html  statistics.html
templates/auth/: register.html
templates/games/: index.html
templates/polls/: create.html
templates/posts/: create.html
templates/profile/: edit.html  view.html
templates/videos/: upload.html
